[project]
name = "projectkoios-workflow"
version = "0.0.0"
description = "Petri-net workflow execution engine"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Eugene Ragasa", email = "eugene@projectkoios.com" },
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/python"]
namespaces = true

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8", "mypy>=1.13"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
